// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/File Multi Upload 1`] = `
Array [
  <div
    className="relative space-y-2"
  >
    <label
      className="mr-2 inline uppercase text-bold-body-300"
      data-testid="txt"
      htmlFor=":r11:"
    >
      Input Label 
    </label>
    <p
      className="text-light-body-300 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Input description",
        }
      }
      data-testid="txt"
      id=":r11:-description"
    />
    <div
      className="border-dashed-2 relative cursor-pointer rounded-xl p-10 bg-white"
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="presentation"
      tabIndex={0}
    >
      <input
        accept="image/png, image/jpeg"
        hidden={true}
        id=":r11:"
        multiple={true}
        onChange={[Function]}
        onClick={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        tabIndex={-1}
        type="file"
      />
      <div
        className="m-auto flex w-fit items-center justify-center gap-3"
      >
        <div
          className="bg-primary-100 flex h-15 w-15 items-center justify-center rounded-lg bg-cover bg-no-repeat"
          style={Object {}}
        >
          <div
            style={
              Object {
                "height": 32,
                "width": 24,
              }
            }
          />
        </div>
        <div
          className="flex-1"
        >
          <p
            className="mb-1 line-clamp-1 text-bold-subtitle-400"
            data-testid="txt"
            title="Upload File (File formats: PNG, JPEG)"
          >
            Upload File (File formats: PNG, JPEG)
          </p>
          <p
            className="line-clamp-1 text-light-body-300 with-inner-html"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Drag and drop or <span className=\\"text-primary underline\\">browse your device</span>",
              }
            }
            data-testid="txt"
            title="Drag and drop or <span className=\\"text-primary underline\\">browse your device</span>"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="mt-8 flex flex-col items-center justify-center gap-8"
  />,
]
`;

exports[`Storyshots Components/Elements/Inputs/File Single Upload 1`] = `
Array [
  <div
    className="relative space-y-2"
  >
    <label
      className="mr-2 inline uppercase text-bold-body-300"
      data-testid="txt"
      htmlFor=":r10:"
    >
      Input Label 
    </label>
    <p
      className="text-light-body-300 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Input description",
        }
      }
      data-testid="txt"
      id=":r10:-description"
    />
    <div
      className="border-dashed-2 relative cursor-pointer rounded-xl p-10 bg-white"
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="presentation"
      tabIndex={0}
    >
      <input
        accept="image/png, image/jpeg"
        hidden={true}
        id=":r10:"
        onChange={[Function]}
        onClick={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        tabIndex={-1}
        type="file"
      />
      <div
        className="m-auto flex w-fit items-center justify-center gap-3"
      >
        <div
          className="bg-primary-100 flex h-15 w-15 items-center justify-center rounded-lg bg-cover bg-no-repeat"
          style={Object {}}
        >
          <div
            style={
              Object {
                "height": 32,
                "width": 24,
              }
            }
          />
        </div>
        <div
          className="flex-1"
        >
          <p
            className="mb-1 line-clamp-1 text-bold-subtitle-400"
            data-testid="txt"
            title="Upload File (File formats: PNG, JPEG)"
          >
            Upload File (File formats: PNG, JPEG)
          </p>
          <p
            className="line-clamp-1 text-light-body-300 with-inner-html"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Drag and drop or <span className=\\"text-primary underline\\">browse your device</span>",
              }
            }
            data-testid="txt"
            title="Drag and drop or <span className=\\"text-primary underline\\">browse your device</span>"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="mt-8 flex flex-col items-center justify-center gap-8"
  />,
]
`;
